# papernest-development-test

./: .gitignore  Dockerfile.dev  Makefile  REAMDE.md  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: constants.py  env.py  load_data.py  logger.py  main.py  router.py  schemas.py  services.py
app/api_address/: client.py
tests/: test_router.py  test_services.py
tests/api_address/: test_client.py
tests/resources/: antennas.csv
