[tool.poetry]
name = "papernest-development-test"
version = "0.1.0"
description = ""
authors = ["guguur"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
requests = "^2.32.3"
pandas = "^2.2.3"
geopandas = "^1.0.1"

[tool.poetry.group.testing]
optional = true
[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.poetry.group.quality]
optional = true
[tool.poetry.group.quality.dependencies]
ruff = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "C", "B", "PL", "I", "W", "S"]
[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
    "PLR0913",  # Too many arguments
    "S101",  # Use of assert detected
]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--junit-xml=report.xml",
]
